# PaperServer

./: .gitignore  Application.hs  Foundation.hs  INSTALL.md  Import.hs  LICENSE  Model.hs  PaperServer.cabal  README.md  Settings.hs  TODO.md  compile.sh  devel.hs  macosx_nginx.conf  mkfolders.sh  setup.sh
ChromeExt/: README.md  background.html  background.js  common.css  common.js  content_script.js  elsevier.js  manifest.json  mutation_observer.js  options.html  options.js  parse.js  popup.html  popup.js
Handler/: Activity.hs  Form.hs  Home.hs  Paper.hs  PaperList.hs  PaperListW2UI.hs  Render.hs  Resource.hs  Utils.hs  View.hs  Widget.hs
Model/: Defs.hs  Epub.hs  MsgPack.hs  PaperMongo.hs  PaperP.hs  PaperReader.hs  PaperReaderTypes.hs  Pubmed.hs  RIS.hs
Parser/: Formatter.hs  Import.hs  JSON.hs  Lens.hs  Main.hs  Paper.hs  PaperReader.hs  PaperReaderTypes.hs  Settings.hs  Utils.hs  batchtest.sh  paperserver-parser.cabal  paperserver-parser.cabal-old
Parser/Parser/: Paper.hs  PaperReader.hs  PaperReaderTypes.hs  Utils.hs
Parser/Parser/Publisher/: ACS.hs  AnnualRev.hs  Elsevier.hs  Nature2.hs  Nature3.hs  Nature4.hs  NatureA.hs  NatureCommon.hs  NatureL.hs  NatureRev.hs  PLoSONE.hs  PNAS.hs  Rockfeller.hs  Science.hs  Wiley.hs
Parser/Publisher/: ACS.hs  AnnualRev.hs  Elsevier.hs  Generic.hs  Nature2.hs  Nature3.hs  Nature4.hs  NatureA.hs  NatureCommon.hs  NatureL.hs  NatureRev.hs  PLoSONE.hs  PNAS.hs  Rockfeller.hs  Science.hs  Wiley.hs
Settings/: StaticFiles.hs
config/: analytics_code  approotfolder  hostname  keter.yaml  models  mongoDB.yml  policy_embed.html  routes  settings.yml  webmaster_email
deploy/: Procfile
doc/: intro.css  intro.html  techinfo.html
doc/ja/: intro.html
static/css/: activity.less  confirm_register.less  duplicated_user.less  epub.css  format_a.css  format_a.less  format_a_mobile.less  format_b.less  format_c.less  infoModal.less  metrics.less  paperlist.less  paperlist_mobile.less  paperlist_tablet.css  paperlist_tablet.less  paperlist_with_json.css  paperlist_with_json.less  welcome.less  welcome_mobile.less
static/img/: bg.psd  bg2.psd  jump_ready.psd  jump_unavailable.psd
static/js/: activity.js  format-b-ui.js  format_a_mobile.js  format_c.js  metrics.js  paperlist-json-ui.js  paperlist.ts  paperlist_mobile.js
static/js/lib/: bootstrap.d.ts
templates/: activity.mastache.html  bookmarklet_paper_added.hamlet  bookmarklet_paper_exists.hamlet  bookmarklet_param_invalid.hamlet  confirm_register.hamlet  default-layout-wrapper.hamlet  default-layout.hamlet  duplicated_user.hamlet  format_a.hamlet  format_a_mobile.hamlet  format_b.hamlet  format_b_tablet.hamlet  format_c.mastache.html  list.mastache.html  not-found-doi.hamlet  not_registered_user.hamlet  paperinfo_modal_ajax.hamlet  paperinfo_modal_placeholder.hamlet  paperinfo_modal_withdata.hamlet  paperlist.hamlet  paperlist_mobile.hamlet  paperlist_tablet.hamlet  paperlist_with_json.hamlet  register_suspended.hamlet  resourcelist.hamlet  welcome.hamlet  welcome_mobile.hamlet
