name:              PaperServer
version:           0.4.0
license:           GPL
license-file:      LICENSE
author:            Hiro Kai
maintainer:        Hiro Kai
synopsis:          Paper server.
description:       Download and organize text format of journal articles.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://PaperServer.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Paper
                     Handler.Render
                     Handler.View
                     Handler.PaperList
                     Handler.PaperListW2UI
                     Handler.Resource
                     Handler.Widget
                     Handler.Utils
                     Handler.Form
                     Model.Epub
                     Model.PaperReader
                     Model.PaperReaderTypes
                     Model.PaperP
                     -- Model.PaperReader.Utils


    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -O0 -fno-warn-missing-signatures -fno-warn-hi-shadowing -fwarn-unused-imports -fno-warn-missing-signatures
    else
        ghc-options:   -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4          && < 5
                 -- , yesod-platform                >= 1.1        && < 1.2
                 , yesod                         >= 1.1.5      && < 1.2
                 , yesod-core                    >= 1.1.7      && < 1.2
                 , yesod-auth                    >= 1.1        && < 1.2
                 , yesod-static                  >= 1.1        && < 1.2
                 , yesod-default                 >= 1.1        && < 1.2
                 , yesod-form                    >= 1.1        && < 1.3
                 , clientsession                 >= 0.8        && < 0.9
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 1.1        && < 1.2
                 , persistent-mongoDB            >= 1.1        && < 1.2
                 , persistent-template           >= 1.1.1      && < 1.2
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0.2      && < 1.2
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.3        && < 1.4
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 1.8        && < 1.10
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 1.3        && < 1.4
                 , data-default
                 , aeson
                 , conduit                       >= 1.0
                 , monad-logger                  >= 0.3
                 , fast-logger                   >= 0.3
                 , safe
                 , base64-bytestring >= 1.0
                 , data-default
                 , containers
                 , xml-conduit
                 , html-conduit
                 , aeson
                 , SHA
                 , blaze-markup
                 -- , MissingH
                 , parsec
                 , time
                 , blaze-html
                 , rex
                 , bytestring
                 , vector
                 , dom-selector
                 , filepath
                 , random
                 , process
                 , utf8-string
                 , hashable
                 , file-embed
                 , lens
                 , paperserver-parser
                 , mongoDB
                 , xss-sanitize
                 -- , uuid >= 1.2.6

executable         PaperServer
    if flag(library-only)
        Buildable: False

    main-is:           ../app/main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , PaperServer
                     , yesod-default

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , PaperServer
                 , yesod-test
                 , yesod-default
                 , yesod-core
                 , persistent                    >= 1.0        && < 1.1
                 , persistent-mongoDB     >= 1.0        && < 1.1
