name:              PaperServer
version:           0.10.0
license:           GPL
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Paper
                     Handler.Render
                     Handler.View
                     Handler.PaperList
                     Handler.PaperListW2UI
                     Handler.Resource
                     Handler.Widget
                     Handler.Utils
                     Handler.Form
                     Model.Defs
                     Model.Epub
                     Model.PaperReader
                     Model.PaperReaderTypes
                     Model.PaperMongo
                     Model.PaperP
                     Parser.Import
                     Parser.Paper
                     Parser.Formatter
                     Parser.PaperReader
                     Parser.PaperReaderTypes
                     Parser.Settings
                     Parser.Utils
                     Parser.Publisher.ACS
                     Parser.Publisher.AnnualRev
                     Parser.Publisher.Elsevier
                     Parser.Publisher.Nature2
                     Parser.Publisher.Nature3
                     Parser.Publisher.Nature4
                     Parser.Publisher.NatureA
                     Parser.Publisher.NatureCommon
                     Parser.Publisher.NatureL
                     Parser.Publisher.NatureRev
                     Parser.Publisher.PLoSONE
                     Parser.Publisher.PNAS
                     Parser.Publisher.Rockfeller
                     Parser.Publisher.Science
                     Parser.Publisher.Wiley

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4          && < 5
                 -- , yesod-platform                >= 1.1        && < 1.2
                 , yesod                         >= 1.2        && < 1.3
                 , yesod-core                    >= 1.2        && < 1.3
                 , yesod-auth                    >= 1.2        && < 1.3
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 1.2        && < 1.3
                 , persistent-mongoDB            >= 1.2        && < 1.3
                 , persistent-template           >= 1.2        && < 1.3
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0.2      && < 1.2
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.3        && < 1.4
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 1.9        && < 1.10
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 1.3        && < 1.4
                 , data-default
                 , aeson
                 , conduit                       >= 1.0
                 , monad-logger                  >= 0.3
                 , fast-logger                   >= 0.3
                 , safe
                 , base64-bytestring
--                 , data-default
                 , containers
                 , xml-conduit
                 , html-conduit
--                 , aeson
                 , SHA
                 , blaze-markup
                 , parsec
                 , time
                 , blaze-html
                 , rex
                 , uuid >= 1.2.6
--                 , bytestring
--                 , vector
                 , dom-selector
                 , filepath
--                 , random
                 , process
--                 , utf8-string
                 , hashable
                 , file-embed
                 , lens
                 , mongoDB
                 , xss-sanitize
                 , bson  >= 0.2.2
                 , wai

executable         PaperServer
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , PaperServer
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , PaperServer
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-mongoDB
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
